# ModularShaderLanguage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml  update-submodules.sh
.github/workflows/: main.yml
Client/: CMakeLists.txt  CompleteShader.mslb  README.md
Client/include/MSL/Client/: ModuleC.h  ModuleCpp.h  TypesC.h  TypesCpp.h
Client/src/: Module.cpp
Client/test/: CMakeLists.txt  CompleteShader.mslb  ComputeShader.mslb  Helpers.h  ModuleTest.cpp  README.md  main.cpp
Compile/: CMakeLists.txt  README.md
Compile/include/MSL/Compile/: CompiledResult.h  Config.h  Output.h  Target.h  TargetGlsl.h  TargetMetal.h  TargetSpirV.h  Types.h
Compile/src/: CompiledResult.cpp  Compiler.cpp  Compiler.h  ExecuteCommand.cpp  ExecuteCommand.h  GlslOutput.cpp  GlslOutput.h  MetalOutput.cpp  MetalOutput.h  Parser.cpp  Parser.h  Preprocessor.cpp  Preprocessor.h  SpirVProcessor.cpp  SpirVProcessor.h  Target.cpp  TargetGlsl.cpp  TargetMetal.cpp  TargetSpirV.cpp  Token.h  TokenList.h
Compile/test/: CMakeLists.txt  CompilerTest.cpp  ExecuteCommandTest.cpp  Helpers.h  OutputTest.cpp  ParserBlendStateTest.cpp  ParserDepthStencilStateTest.cpp  ParserMultisampleStateTest.cpp  ParserRasterizationStateTest.cpp  ParserSamplerTest.cpp  ParserTest.cpp  PreprocessorTest.cpp  SpirVProcessorTest.cpp  TargetGlslTest.cpp  TargetMetalTest.cpp  TargetSpirVTest.cpp  TargetTest.cpp
Compile/test/inputs/: .Simple.msl.swo  ClipAndCullDistances.msl  CombineReflection.msl  CompileError.msl  CompileWarning.msl  CompileWarning.mslh  CompleteFragmentInputShader.msl  CompleteShader.msl  ComputeLocalSize.msl  DuplicateEntryPoint.msl  DuplicateEntryPoint.mslh  ExplicitInputsOutputs.msl  ExplicitInputsOutputsVarying.msl  FragmentInputs.msl  IncludeError.msl  InputsOutputs.msl  InvalidResources.conf  LineNumbers.msl  LineNumbers.mslh  LinkAllStages.msl  LinkDifferentInlineStructType.msl  LinkDifferentStructType.msl  LinkDifferentType.msl  LinkError.msl  LinkNestedStructs.msl  LinkNotPresent.msl  LinkStructArray.msl  LinkStructNotPresent.msl  LinkStructUsedTwice.msl  LinkStructWithinOutputBlock.msl  MissingEntryPoint.msl  MixedExplicitImplicitLocations.msl  MultipleLinkMembers.msl  Pipeline.msl  PipelineEarlyFragmentTests.msl  PreprocError.msl  PrimitiveTypes.msl  PushConstantMismatch.msl  RemoveUniformBlocks.msl  Resources.conf  (+8 more)
Compile/test/outputs/: CompleteFragmentInputShader.frag.metal  CompleteFragmentInputShaderStripped.frag.metal  FragmentInputs.frag  Pipeline.frag  PipelineEarlyFragmentTests.frag  RemoveUniformBlocks.vert  Simple.msl  StageFilters.comp  StageFilters.frag  StageFilters.geom  StageFilters.tessc  StageFilters.tesse  StageFilters.vert  Varying.frag  Varying.tesc  Varying.tese  Varying.vert
Core/: CMakeLists.txt  README.md
Core/include/MSL/: Config.h  Output.h
Core/src/: Preprocessor.cpp
Core/test/: CMakeLists.txt  OutputTest.cpp  PreprocessorTest.cpp
Core/test/inputs/: PreprocError.msl
Core/test/outputs/: Simple.msl
Frontend/: CMakeLists.txt  README.md
Frontend/include/MSL/Frontend/: DefaultFileManager.h  File.h  FileManager.h  Frontend.h  Output.h  Parser.h  Path.h  Token.h
Frontend/include/MSL/Frontend/Parse/: DefineMap.h  Lexer.h  Preprocessor.h  Token.h
Frontend/src/: DefaultFileManager.cpp  FileManager.cpp
Frontend/src/Parse/: DefineMap.cpp  Lexer.cpp  Lexer.flex  Lexer.h  Lexer.lex  Path.cpp  Preprocessor.cpp
Frontend/test/: CMakeLists.txt  FileManagerTest.cpp  LexerTest.cpp  MockFileManager.h  OutputTest.cpp  PathTest.cpp  TokenHelpers.h  TokenStream.h
Shared/: CMakeLists.txt  mslb.fbs  mslb_generated.h
Shared/include/MSL/: Config.h
cmake/: MSLConfig.cmake  config.cmake  install.cmake
cmake/templates/: MSLConfig.cmake.in  NoExport.h.in  UnixExport.h.in  WindowsExport.h.in
doc/: CMakeLists.txt  Doxyfile.in  Language.md
tools/: CMakeLists.txt  README.md
tools/mslb-extract/: CMakeLists.txt  mslb-extract.cpp  mslb-extract.manifest.in
tools/mslc/: CMakeLists.txt  mslc.cpp  mslc.manifest.in
tools/mslc/test/: glsl-bad-version.conf  glsl-disable.conf  glsl-es.conf  glsl-no-version.conf  glsl-old.conf  glsl.conf  metal-ios.conf  metal-osx-bad-version.conf  metal-osx-no-version.conf  metal-osx.conf  run-test.bat  spirv-1.6.conf  spirv.conf
tools/mslc/test/shaders/: CompileError.msl  CompileError.mslh  CompileWarning.msl  CompleteShader.msl  Defines.msl
